# OS-Homework

HW1/: os.c  (+3 more)
HW4/: CMakeLists.txt  a.out  pfind.c  temp.txt
HW4/dir/: pfind.c
HW4/dir/dir0/dir3/dir18/dir39/: cake0.txt  cake1.txt  cake10.txt  cake11.txt  cake12.txt  cake13.txt  cake14.txt  cake15.txt  cake16.txt  cake17.txt  cake18.txt  cake19.txt  cake2.txt  cake3.txt  cake4.txt  cake5.txt  cake6.txt  cake7.txt  cake8.txt  cake9.txt  obstacle0.txt
HW4/dir1/dir10/dir11/: cake19.txt
HW4/dir1/dir10/dir11/dir12/: cake10.txt  cake6.txt  obstacle0.txt
HW4/dir1/dir10/dir11/dir12/dir113/: cake25.txt  obstacle10.txt
HW4/dir1/dir10/dir11/dir12/dir119/: obstacle1.txt  obstacle3.txt
HW4/dir1/dir10/dir11/dir12/dir14/: obstacle15.txt  obstacle18.txt  obstacle25.txt  obstacle7.txt
HW4/dir1/dir10/dir11/dir17/: obstacle14.txt
HW4/dir1/dir10/dir111/: cake27.txt  obstacle21.txt  obstacle6.txt
HW4/dir1/dir10/dir111/dir114/: cake19.txt  obstacle19.txt
HW4/dir1/dir10/dir116/: cake22.txt
HW4/dir1/dir10/dir116/dir120/: obstacle23.txt
HW4/dir1/dir10/dir13/: cake12.txt  cake20.txt  obstacle5.txt
HW4/dir1/dir10/dir13/dir121/: obstacle4.txt
HW4/dir1/dir10/dir13/dir125/: obstacle9.txt
HW4/dir1/dir10/dir13/dir19/: cake13.txt
HW4/dir1/dir10/dir13/dir19/dir110/: obstacle11.txt  obstacle26.txt
HW4/dir1/dir10/dir16/dir112/: cake5.txt  obstacle22.txt
HW4/dir1/dir10/dir16/dir112/dir115/: obstacle24.txt  obstacle27.txt
HW4/dir1/dir10/dir16/dir18/: cake10.txt  obstacle12.txt
HW4/dir1/dir10/dir16/dir18/dir124/: obstacle17.txt  obstacle8.txt
HW4/root/: pfind.c
(+29 files in other folders)
